# python-nostr-win

./: .gitignore  pyproject.toml
nostr/: event.py  key.py  message_pool.py  pow.py  relay.py  relay_manager.py
test/: test_relay_manager.py
