[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nostr"
authors = [
  { name="Mile Fashell", email="milefashell@gmail.com" },
]
description = "A Python library for making Nostr clients on Windows"
urls = { Homepage = "https://github.com/milefashell/python-nostr-win" }
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = [
    "cffi>=1.15.0",
    "cryptography>=37.0.4",
    "pycparser>=2.21",
    "python-socks>=2.1.1",
    "coincurve>=18.0.0",
    "websocket-client>=1.3.3",
]
license = {file = "LICENSE"}
classifiers=[
    'Operating System :: Microsoft :: Windows',
]
dynamic=["version"]

[tool.setuptools_scm]
write_to = "nostr/_version.py"

[project.optional-dependencies]
test = [
  "pytest >=7.2.0",
  "pytest-cov[all]"
]
